[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["Yukimokki <yana.domnina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2024.1"
django = "4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[tool.poetry.scripts]
say-welcome = 'cli:welcome'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
